--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -12,6 +12,12 @@ main {
 /* used paddings to give an extent space for the top and bottom of my name */
 /* font-family is from Google Fonts  */
 /* deleted the margin space from the bottom of h2 */
+.navbar{
+background-color:#FEF9E7;
+
+
+}
+
 h2 {
   color: white;
   font-family: "Libre Baskerville", serif;
@@ -76,7 +82,7 @@ h1 {
 /* gave the background color of the container as white */
 /* used margins and paddings to extend and adjusted the space for the content of container  */
 .aboutmebackground {
-  background-color: white;
+  background-color: #FEF9E7;
   margin-top: 60px;
   margin-bottom: 40px;
   margin-left: 30px;
@@ -85,10 +91,22 @@ h1 {
   padding-right: 30px;
   padding-bottom: 15px;
 }
+.portfoliobackground{
+background-color:#FEF9E7;
+margin-top: 60px;
+margin-bottom: 50px;
+margin-left: 30px;
+margin-right: 30px;
+padding-top: 15px;
+padding-left: 30px;
+padding-right: 30px;
+background-position: center;
+
+}
 
 /* embeded the background image for main area */
 .background {
-  background: url("./workimage/backgroundimg.png");
+  background: url("./workimage/backgroundimage.jpeg");
   background-size: cover;
   background-position: center;
 }
@@ -156,60 +174,34 @@ input[type="submit"]:hover {
   height: 180px;
 }
 
-/* .image {
-  /* width: 330px; */
-  /* font-size: 80px; */
-  /* object-fit: cover; */
-  
-/* } */ */
+/* style project header */
 .card-title{
 color: rgb(74, 170, 165);
 font-family: "Libre Baskerville",
   serif;
 text-align:center; 
-margin-bottom: 0;
+
 
 }
 
-.card{
-  padding-left: 10px;
-  padding-right:10px;
-  margin-bottom: 0;
-  
-  /* display: inline; */
-  /* display: inline-block; */
-  /* float: left;
-  width: 50%; */
-  /* padding: 5px; */
-  
-}
-
+/* style card container and float left  */
 .card-body {
   padding: 5px;
   border: solid;
   border-color: gray;
   border-radius: 10px;
   float:left;
-  width:45%;
+  width:100%;
   margin: 10px;
   text-align:center;
   
-  
-  /* font-size: 2000px; */
-  
 }
 
-/* .clearfix::after {
-  content: "";
-  clear: both;
-  
-} */
-
+/* style githubicon */
 .githubicon{
 font-size: 25px;
 margin-left: 5px;
 color: rgb(74, 170, 165);
-
 
 }
 
@@ -231,10 +223,4 @@ a:hover {
 /* selected link */
 a:active {
   color: lightcoral;
-}
-
-.demo{
- 
-
-
 }
