--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -25,7 +25,16 @@ h2 {
   padding-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 0px;
+  border-radius: 5px;
+  
 }
+
+h2:hover{
+background-color:darkkhaki;
+
+
+}
+
 
 /* copied link of font-family from Google font  */
 /* used margins to give an extent space for the top and the bottom of h2 */
@@ -45,7 +54,7 @@ h1 {
 /* deleted the margin space from the top and bottom of paragraph1 */
 #p1 {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 16px;
 }
 
 /* image is wrapped up by paragraph1 by using float property */
@@ -126,6 +135,7 @@ footer {
   border-width: 6px;
   margin: 0;
   padding: 0;
+  /* border-radius: 5rem; */
 }
 
 /* gave the footer a stlying*/
@@ -147,7 +157,7 @@ footer {
 .btn {
   background-color: rgb(74, 170, 165);
   color: white;
-  border-radius: 0rem;
+  border-radius: 0.5rem;
   padding: 0.6rem 1.3rem;
   font-size: 0.8rem;
   margin-left: -10px;
@@ -222,5 +232,41 @@ a:hover {
 
 /* selected link */
 a:active {
-  color: lightcoral;
+  color:plum;
 }
+
+
+
+.nav-link:hover {
+  /* font-family: 'Fredericka the Great',
+  cursive; */
+  background-color:rgb(74, 170, 165);
+  border-radius: 5px;
+  color:white;
+  font-family: "Libre Baskerville",
+  serif;
+}
+
+
+
+ul li{
+font-family: 'Fredericka the Great',
+cursive;
+
+
+
+}
+
+
+.nav-link:focus {
+
+background-color:darkkhaki;
+
+
+}
+
+/* .nav-link:active{
+
+ color:gray;
+} */
+
