--- a/Assets/style1.css
+++ b/Assets/style1.css
@@ -15,7 +15,6 @@ main {
 .navbar{
 background-color:#FEF9E7;
 
-
 }
 
 h2 {
@@ -66,6 +65,7 @@ h1 {
   margin-bottom: 5px;
   width: 26%;
   height: auto;
+  border-radius: 5px;
 }
 
 /* used media queries with the max-width values for image "aprilimg" to be a reponsive image when the width of screen in large,medium,and small */
@@ -99,6 +99,7 @@ h1 {
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 15px;
+  border-radius: 5px;
 }
 .portfoliobackground{
 background-color:#FEF9E7;
@@ -110,6 +111,7 @@ padding-top: 15px;
 padding-left: 30px;
 padding-right: 30px;
 background-position: center;
+border-radius: 5px;
 
 }
 
